// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageSidebar renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="flex flex-col PageSidebar-root PageSidebar-light PageSidebar-medium PageSidebar-hamburgerNotAvailable"
    >
      <div
        class="PageSidebar-wrapper PageSidebar-sticky"
      >
        <div
          class="flex flex-col PageSidebar-scrollableContent"
        >
          <div
            class="PageSidebar-spacer"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageSidebar with menu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="flex flex-col PageSidebar-root PageSidebar-light PageSidebar-medium PageSidebar-hamburgerNotAvailable"
    >
      <div
        class="PageSidebar-wrapper PageSidebar-sticky"
      >
        <div
          class="flex flex-col PageSidebar-scrollableContent"
        >
          <div
            class="PageSidebar-spacer"
          />
          <ul
            class="MuiList-root PicassoMenu-root PicassoSidebarMenu-root"
            role="menu"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageSidebar with one normal and one bottom menu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="flex flex-col PageSidebar-root PageSidebar-light PageSidebar-medium PageSidebar-hamburgerNotAvailable"
    >
      <div
        class="PageSidebar-wrapper PageSidebar-sticky"
      >
        <div
          class="flex flex-col PageSidebar-scrollableContent"
        >
          <div
            class="PageSidebar-spacer"
          />
          <ul
            class="MuiList-root PicassoMenu-root PicassoSidebarMenu-root"
            role="menu"
            tabindex="-1"
          />
          <ul
            class="MuiList-root PicassoMenu-root PicassoSidebarMenu-root PicassoSidebarMenu-bottom"
            role="menu"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
